# ug_ndigo6g

./: .gitignore  .readthedocs.yaml  Doxyfile  Makefile  README.md  conf.py  doxyrest-config.lua  environment.yml  index.rst  make.bat  modify_api_sidebar.py  pyproject.toml  replace_xsd_commands.bat  replace_xsd_commands.sh  requirements-dev.txt  requirements-frozen.txt  requirements.txt  test.py  todo.md  update_interface.sh  update_ug_example.sh
.github/workflows/: build.yml  build_and_publish.yml  publish.yml  test.yml  test_build.yml
docs/: Hardware.RST  Ndigo_CExp.rst  Ndigo_Hardware.rst  Ndigo_Intro.rst  Ndigo_PackForm.rst  Ndigo_RevHistory.rst  conf.py  index.rst
docs/RST/: Ndigo_API.rst  Ndigo_Intro.rst
docs/_static/: style.css
include/: ndigo6g12_interface.h
ndigo6g_updated/: Readme.md  conf.py
ndigo6g_updated/RST/: Hardware.RST  Ndigo_CExp.rst  Ndigo_Intro.rst  Ndigo_RevHistory.rst  Ndigo_Tech.rst  index.rst
ndigo6g_updated/_static/: style.css
ndigo6g_updated/docs/: Hardware.RST  Ndigo_CExp.rst  Ndigo_Hardware.rst  Ndigo_Intro.rst  Ndigo_PackForm.rst  Ndigo_RevHistory.rst  Ndigo_Tech.rst  conf.py
source/: Hardware.RST  Ndigo_API.rst  Ndigo_Tech.rst  api.rst  conf.py  crono_interface.h  cronologicug.sty  erratum.rst  example.rst  extraplaceins.sty  global.rst  hardware.rst  index.rst  introduction.rst  ndigo6g12_interface.h  packform.rst  revhistory.rst  sphinxcronologic.sty  techdata.rst  version.txt
source/_static/: custom.css  style.css
source/_templates/: layout.html  page.html
tmp/: Ndigo_DIN.rst  api_old.rst  modules.rst
(+270 files in other folders)
