[project]
name = "ug-ndigo6g"
version = "1.5.0"
description = "User Guide of cronologic's Ndigo6G-12"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "breathe>=4.36.0",
    "bs4>=0.0.2",
    "furo>=2025.12.19",
    "lxml>=6.1.0",
    "sphinx>=9.0.4",
]

[dependency-groups]
dev = [
    "mplutils==0.5.1",
]

[tool.uv.sources]
mplutils = { git = "https://github.com/frekm/mpl-utils.git", rev = "v0.5.1" }
